--- a/j05_2/index.html
+++ b/j05_2/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <script src="assets/js/script.js"></script>
+    <!-- <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/s3.js"></script> -->
+    <script src="./assets/js/script2.js"></script>
 </body>
 </html>
