--- a/j06/index.html
+++ b/j06/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script3.js"></script>
 </body>
 </html>
